Добавлена возможность считывания QR -кода

--- a/GroupLockApplication/app/src/main/res/menu/home_menu.xml
+++ b/GroupLockApplication/app/src/main/res/menu/home_menu.xml
@@ -31,6 +31,10 @@
                 <item android:id="@+id/settings"
                     android:title="@string/activity_settings"
                     app:showAsAction="never" />
+
+                <item android:id="@+id/qr"
+                    android:title="Qr"
+                    app:showAsAction="ifRoom" />
             </menu>
         </item>
     </menu>
